[metadata]
name = hubitat-events-dhan
version = 0.0.1
author = D Han
author_email = emaildhan@gmail.com
description = Package for fetching hubitat events
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/programmerdays/Hubitat-Events
project_urls =
    Bug Tracker = https://github.com/programmerdays/Hubitat-Events/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203